Add authentication with Discord

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb://localhost:27018/reclaiming-the-wild?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.9.0"
+
+# Discord
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
