--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
     "@prisma/client": "^4.16.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -20,6 +21,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
