--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ name: 'reclaiming-the-wild'
 
 services:
   mongo:
-    build: ./mongodb_replica
+    build: ./.docker/mongodb_replica
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: reclaiming-the-wild
