--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:db": "docker compose up -d",
+    "db:start": "docker compose up -d",
+    "db:generate": "npx prisma generate",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npm run db:generate && next start",
     "lint": "next lint",
     "test": "jest src",
     "test:e2e": "playwright test"
