Generate prisma before build

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "db:start": "docker compose up -d",
     "db:generate": "npx prisma generate",
     "dev": "next dev",
-    "build": "next build",
-    "start": "npm run db:generate && next start",
+    "build": "npm run db:generate && next build",
+    "start": "next start",
     "lint": "next lint",
     "test": "jest src",
     "test:e2e": "playwright test"
