--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@playwright/test": "^1.35.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0"
   }
