--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test": "jest src",
     "test:e2e": "playwright test"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
     "@prisma/client": "^4.16.1",
-    "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
@@ -34,8 +36,10 @@
     "@playwright/test": "^1.35.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/node": "^20.3.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "ts-node": "^10.9.1"
   }
 }
