E2E tests for Discord sign in

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ DATABASE_URL="mongodb://localhost:27018/reclaiming-the-wild?directConnection=tru
 # Discord
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+
+E2E_DISCORD_EMAIL=""
+E2E_DISCORD_PASSWORD=""
