--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ next-env.d.ts
 /test-results/
 /playwright-report/
 /playwright/.cache/
+/playwright/.auth
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/
