--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.3.2",
+    "dotenv": "^16.3.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
