--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@playwright/test": "^1.35.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^20.3.2",
     "dotenv": "^16.3.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
